/iTrade/ChangeLog
===============================================================================

On the road for v0.4.8 (Druuna)

===============================================================================

2006-01-03  Gilles Dumortier <dgil at ieee dot org>
	* Fix Amex tickers with "." or "-" : suffix for Yahoo (SF bug 1726101)
	* Fix Toronto exchange tickers with 2 "-" for Yahoo (SF bug 1723060)
	* New instable tarball + update website

===============================================================================

2006-01-03  Gilles Dumortier <dgil at ieee dot org>
	* Prepare 0.4.6 official release
		SVN tag : ITRADE_0_4_6_NAUSICAA2_TAG
		SVN branch : ITRADE_0_4_6_NAUSICAA2_BRANCH

2008-01-03  Gilles Dumortier <dgil at ieee dot org>
	* View Quote : Graph : Refresh Broken (SF bug 1665668) : Fix a lot of
	  issues on the refresh mechanism when launching the window, changing
	  the page or changing the quote.

2007-01-02  Michel Legrand <m_leg at users dot sourceforge dot net>
	* Trading calendar updated for MILAN EXCHANGE (data/closed.txt)

2008-01-02  Gilles Dumortier <dgil at ieee dot org>
	* Graph View : objects are correctly drawn first time then after
	* Graph View : Unit Price line (SF bug 1647463)
	* Properties view - Reinit / Valid buttons on connectors have effect
	  but item in combo is not correctly selected (SF bug 1724346)
	* Indicator : display the indice market and clock (previous was the
	  portfolio default market and the connector latest clock)
	* Convert from connector timezone (for example, finance.yahoo.com is
	  EST) to quote place timezone (for example, GTO is CET)

2008-01-01  Gilles Dumortier <dgil at ieee dot org>
	* filter the proxy server and auth (SF bug 1861624)
	* connection Timeout is configurable (SF bug 1861328)

2007-12-31  Gilles Dumortier <dgil at ieee dot org>
	* New tarball (r825) (0.4.6 Release Candidat)
	* List of quotes view : display the number of quotes filtered in list
